2005-09-15 Pablo Arroyo <zioma@linups.org>

	* src/buoh-window.c: Fix crash when deleting a comic list item

2005-09-15  Carlos Garcia Campos  <carlosgc@gnome.org>

	* data/Makefile.am: s/buoh.glade/buoh-ui.xml/
	* data/buoh.glade: Removed
	* data/buoh-ui.xml: Added
	Remove glade file and use the xml file needed for building the ui with
	GtkUIManager

	* src/buoh-view-comic.c:
	* src/buoh-view-message.c:
	Set view-comic and view-message widgets as focusables

	* src/buoh-view.c: Grab focus into view-comic or view-message when the
	view receive the focus depending on the view status. Get the focus
	when receive a button press event

	* src/buoh-window.c: Remove all glade dependecies and use GtkUIManager
	to build the ui.
	
2005-09-13  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh.c: We don't need the last comic for every manager when
	creating the model

2005-09-13  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-comic-manager-date.c: Do not insert a new comic every time,
	only if it isn't in the list yet. Do not set as current always the
	first item, but really the current one

	* src/buoh-comic-manager.[ch]: s/PROP_LIST/PROP_CURRENT/ for the
	current property. Add a function for comparing list items

2005-09-13  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-properties-dialog.c: Remove finalize method. Fix build
	problem

2005-09-13  Esteban Sanchez  <esteban@steve-o.org>

	* data/comics.xml: s/simple/date. Added some daily strips from spanish
	newspapers.
	
	* src/Makefile.am: Added buoh-comic-manager* and removed
	comic-simple.[ch] to buoh_SOURCES
	
	* src/buoh-comic-manager.[ch]: Changed some properties to
	CONSTRUCT_ONLY. Free the comic list in the finalize.
	
	* src/buoh-comic-manager-date.[ch]: Updated with fixing of leaks, bugs
	and other stuff.
	
	* src/buoh-comic-list.[ch]: Changed to store a BuohComicManager. Added
	a get_comic_manager method.
	
	* src/buoh-comic.[ch]: Adapted to the new comic manager, now it's